--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@supabase/supabase-js": "^2.86.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.10.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
